--- a/MyApp/SwiftDemo/Info.plist
+++ b/MyApp/SwiftDemo/Info.plist
@@ -25,6 +25,18 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>请允许访问您的蓝牙，以获取更好的体验</string>
+	<key>NSCameraUsageDescription</key>
+	<string>请允许访问您的相机， 以获取更好的体验</string>
+	<key>NSContactsUsageDescription</key>
+	<string>请允许访问您的通讯录，以获取更好的体验</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>请允许访问您的位置，以获取更好的体验</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请允许访问您的麦克风，以获取更好的体验</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请允许访问您的相册，以获取更好的体验</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
