--- a/MyApp/SwiftDemo/Info.plist
+++ b/MyApp/SwiftDemo/Info.plist
@@ -37,15 +37,17 @@
 	<string>请允许访问您的麦克风，以获取更好的体验</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>请允许访问您的相册，以获取更好的体验</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
