--- a/MyApp/SwiftDemo/ViewController/RootViewController/Applist.plist
+++ b/MyApp/SwiftDemo/ViewController/RootViewController/Applist.plist
@@ -50,5 +50,85 @@
 		<key>vc</key>
 		<string></string>
 	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string></string>
+		<key>title</key>
+		<string></string>
+		<key>vc</key>
+		<string></string>
+	</dict>
 </array>
 </plist>
