--- a/MyApp/SwiftDemo/ViewController/MineViewController/PersonalItem.plist
+++ b/MyApp/SwiftDemo/ViewController/MineViewController/PersonalItem.plist
@@ -7,30 +7,40 @@
 		<string>我的位置</string>
 		<key>icon</key>
 		<string>searchbutton_nor</string>
+		<key>class</key>
+		<string>MyLocationViewController</string>
 	</dict>
 	<dict>
 		<key>name</key>
 		<string>我的位置</string>
 		<key>icon</key>
 		<string>searchbutton_nor</string>
+		<key>class</key>
+		<string>MyLocationViewController</string>
 	</dict>
 	<dict>
 		<key>name</key>
 		<string>我的位置</string>
 		<key>icon</key>
 		<string>searchbutton_nor</string>
+		<key>class</key>
+		<string>MyLocationViewController</string>
 	</dict>
 	<dict>
 		<key>name</key>
 		<string>我的位置</string>
 		<key>icon</key>
 		<string>searchbutton_nor</string>
+		<key>class</key>
+		<string>MyLocationViewController</string>
 	</dict>
 	<dict>
 		<key>name</key>
 		<string>我的位置</string>
 		<key>icon</key>
 		<string>searchbutton_nor</string>
+		<key>class</key>
+		<string>MyLocationViewController</string>
 	</dict>
 </array>
 </plist>
