--- a/MyApp/SwiftDemo/ViewController/MineViewController/PersonalItem.plist
+++ b/MyApp/SwiftDemo/ViewController/MineViewController/PersonalItem.plist
@@ -42,5 +42,85 @@
 		<key>className</key>
 		<string>MyLocationViewController</string>
 	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>我的位置</string>
+		<key>icon</key>
+		<string>searchbutton_nor</string>
+		<key>className</key>
+		<string>MyLocationViewController</string>
+	</dict>
 </array>
 </plist>
